<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/search_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/search_hint"
        android:imeOptions="actionSearch"
        android:inputType="textAutoComplete"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_et" />

    <TextView
        android:id="@+id/error_tv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/search_et"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/no_movie_found"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/loading_tv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/search_et"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/loading"
        android:visibility="gone"/>


</androidx.constraintlayout.widget.ConstraintLayout>