<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mainView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/productIv"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:scaleType="fitXY"
            app:layout_constraintDimensionRatio="H,1:1.25"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/movie_name_head_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:text="@string/name"
            app:layout_constraintTop_toBottomOf="@+id/productIv"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/movie_name_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            app:layout_constraintTop_toTopOf="@+id/movie_name_head_tv"
            app:layout_constraintBottom_toBottomOf="@+id/movie_name_head_tv"
            app:layout_constraintStart_toEndOf="@+id/movie_name_head_tv"/>

        <TextView
            android:id="@+id/year_head_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:text="@string/year"
            app:layout_constraintTop_toBottomOf="@+id/movie_name_head_tv"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/year_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@+id/year_head_tv"
            app:layout_constraintBottom_toBottomOf="@+id/year_head_tv"
            app:layout_constraintStart_toEndOf="@+id/year_head_tv"
            android:layout_marginStart="10dp"/>


        <TextView
            android:id="@+id/rated_head_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:text="@string/rated"
            app:layout_constraintTop_toBottomOf="@+id/year_head_tv"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/rated_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@+id/rated_head_tv"
            app:layout_constraintBottom_toBottomOf="@+id/rated_head_tv"
            app:layout_constraintStart_toEndOf="@+id/rated_head_tv"
            android:layout_marginStart="10dp"/>

        <TextView
            android:id="@+id/released_head_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:text="@string/released"
            app:layout_constraintTop_toBottomOf="@+id/rated_head_tv"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/released_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@+id/released_head_tv"
            app:layout_constraintBottom_toBottomOf="@+id/released_head_tv"
            app:layout_constraintStart_toEndOf="@+id/released_head_tv"
            android:layout_marginStart="10dp"/>

        <TextView
            android:id="@+id/runTime_head_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:text="@string/runtime"
            app:layout_constraintTop_toBottomOf="@+id/released_head_tv"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/runTime_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@+id/runTime_head_tv"
            app:layout_constraintBottom_toBottomOf="@+id/runTime_head_tv"
            app:layout_constraintStart_toEndOf="@+id/runTime_head_tv"
            android:layout_marginStart="10dp"/>

        <TextView
            android:id="@+id/genre_head_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:text="@string/genre"
            app:layout_constraintTop_toBottomOf="@+id/runTime_head_tv"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/genre_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@+id/genre_head_tv"
            app:layout_constraintBottom_toBottomOf="@+id/genre_head_tv"
            app:layout_constraintStart_toEndOf="@+id/genre_head_tv"
            android:layout_marginStart="10dp"/>

        <TextView
            android:id="@+id/director_head_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:text="@string/director"
            app:layout_constraintTop_toBottomOf="@+id/genre_head_tv"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/director_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@+id/director_head_tv"
            app:layout_constraintBottom_toBottomOf="@+id/director_head_tv"
            app:layout_constraintStart_toEndOf="@+id/director_head_tv"
            android:layout_marginStart="10dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>